# rabbitizer

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md
include/instructions/: InstrCategory.inc  RabbitizerInstrId.h  RabbitizerInstructionPowerPC.h
include/instructions/instr_id/: RabbitizerInstrId_powerpc.inc
include/instructions/instr_id/powerpc/: powerpc_normal.inc
rust/src/: instruction.rs
src/instructions/: RabbitizerInstrDescriptor.c  RabbitizerInstrId.c
src/instructions/RabbitizerInstruction/: RabbitizerInstruction_ProcessUniqueId.c
src/instructions/RabbitizerInstructionPowerPc/: RabbitizerInstructionPowerPc.c  RabbitizerInstructionPowerPc_ProcessUniqueId.c
src/instructions/RabbitizerInstructionR5900/: RabbitizerInstructionR5900_ProcessUniqueId.c
tests/c/: powerpctest.c
