load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "rabbitizer",
    srcs = glob([
        "src/**/*.c",
        "src/**/*.cpp",
        "cplusplus/src/**/*.cpp",
    ]),
    hdrs = glob([
        "tables/**/*.h",
        "tables/**/*.inc",
        "include/**/*.h",
        "cplusplus/include/**/*.hpp",
    ]) + [
        "cplusplus/include/rabbitizer.hpp",
        "include/rabbitizer.h",
    ],
    copts = [
        "-Icplusplus/include",
        "-Iinclude",
        "-Itables",
    ],
    includes = [
        "cplusplus/include",
        "include",
        "tables",
    ],
)

rust_library(
    name = "rust",
    srcs = glob(["rust/src/*.rs"]),
    crate_name = "rabbitizer",
    crate_root = "rust/src/lib.rs",
    deps = [
        ":rabbitizer",
        "@crates//:num_enum",
    ],
)
